@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Add RequiresDisplay test profile property to indicate if the test profile explicitly requires a monitor / display server to work
 pts-core: Add RequiresNetwork test profile property to indicate if the test profile needs a working network connection
 pts-core: Add RequiresInternet test profile property to indicate if the test profile needs a working Internet connection
+pts-core: Don't install tests where the current run-time checks will fail
 
 Phoronix Test Suite 8.2.0 Milestone 4
 7 September 2018
